# electrochemical-impedance-spectroscopy-mre

./: .gitignore  README.md  degradation_sim.py  detector.py  pyproject.toml  randles_model.py  requirements.txt
notebooks/: 01-randles-baseline.ipynb  02-degradation-trajectories.ipynb  03-detector-evaluation.ipynb  04-real-data-nasa-battery.ipynb  05-your-own-data.ipynb
