[project]
name = "eis-simulation"
version = "0.1.0"
description = "EIS-based electrode health detection for molten oxide electrolysis — synthetic data pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "impedance>=1.4",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
notebooks = ["notebook>=7.0", "jupyterlab>=4.0", "tqdm"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
